--- a/portfolio.html
+++ b/portfolio.html
@@ -19,25 +19,25 @@
     <header class="header">
         <div class="container header__container">
             <nav class="navigation">
-                <a href="./index.html" class="navigation__logo logo link"><span class="navigation__blue-logo">Web</span>Studio</a>
+                <a href="./index.html" class="navigation__logo logo link"><span class="logo logo--blue-color">Web</span>Studio</a>
                 <ul class="navigation__list list">
-                    <li class="navigation__item"><a href="./index.html" class="navigation__link link ">Студия</a></li>
-                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link link current">Портфолио</a></li>
+                    <li class="navigation__item"><a href="./index.html" class="navigation__link link current ">Студия</a></li>
+                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link link">Портфолио</a></li>
                     <li class="navigation__item"><a href="" class="navigation__link link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacts list">
-                <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contact-link link">
-                        <svg class="contact-icon" width="16" height="12">
-                            <use href="./img/symbol-defs.svg#icon-envelope"></use>
-                        </svg> info@devstudio.com</a>
+            <ul class="contacts header__contacts list">
+                <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__link link">
+                    <svg class="contacts__icon" width="16" height="12">
+                    <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                </svg> info@devstudio.com</a>
                 </li>
-                <li class="contacts-item"><a href="tel:+380961111111" class="contact-link link">
-                        <svg class="contact-icon" width="10" height="16">
-                            <use href="./img/symbol-defs.svg#icon-smartphone"></use>
-                        </svg> +38 096 111 11 11</a></li>
+                <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link link">
+                    <svg class="contacts__icon" width="10" height="16">
+                    <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                </svg> +38 096 111 11 11</a></li>
             </ul>
-        </div>
+        </div>  
     </header>
 <main>
         <section class="portfolio section">
@@ -165,50 +165,47 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="adress-container">
-                <a href="./index.html" class="footer-logo link"><span class="footer-blue-logo">Web</span>Studio</a>
-                <address class="address">
-                    <ul class="address-list list">
-                        <li class="address-studio"><a href="https://goo.gl/maps/qcduLgNu4vZSZneLA" target="_blank"
-                                rel="noopener noreferrer nofollow" class="address-link link">г. Киев, пр-т Леси Украинки,
-                                26</a></li>
-                        <li class="address-item"><a href="mailto:info@example.com"
-                                class="address-item-link link">info@example.com</a>
+            <div class="adress adress-container">
+                <a href="./index.html" class="adress__logo logo link"><span class="logo--blue-color logo">Web</span>Studio</a>
+                <address class="adress__address">
+                    <ul class="address__list list">
+                        <li class="address__item"><a href="https://goo.gl/maps/qcduLgNu4vZSZneLA" target="_blank"
+                                rel="noopener noreferrer nofollow" class="address__link link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="address__item"><a href="mailto:info@example.com" class="address__item-link link">info@example.com</a>
                         </li>
-                        <li class="address-item"><a href="tel:+380991111111" class="address-item-link link">+38 099 111 11
-                                11</a></li>
+                        <li class="address__item"><a href="tel:+380991111111" class="address__item-link link">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
-            <div class="soc-links-container">
-                <h4 class="footer-join">присоединяйтесь</h4>
-                <ul class="team-soc-list list">
-                    <li class="team-soc-item"><a href="" class="team-soc-link footer-soc-link link">
-                            <svg class="team-soc-icon" width="20" height="20">
+            <div class="footer-soc">
+                <h4 class="footer-soc__title">присоединяйтесь</h4>
+                <ul class="soc list">
+                    <li class="soc__item"><a href="" class="soc__link footer-soc__link link">
+                            <svg class="soc__icon" width="20" height="20">
                                 <use href="./img/symbol-defs.svg#icon-instagram"></use>
                             </svg></a></li>
-                    <li class="team-soc-item"><a href="" class="team-soc-link footer-soc-link link">
-                            <svg class="team-soc-icon" width="20" height="20">
+                    <li class="soc__item"><a href="" class="soc__link footer-soc__link link">
+                            <svg class="soc__icon" width="20" height="20">
                                 <use href="./img/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
-                    <li class="team-soc-item"><a href="" class="team-soc-link footer-soc-link link">
-                            <svg class="team-soc-icon" width="20" height="20">
+                    <li class="soc__item"><a href="" class="soc__link footer-soc__link link">
+                            <svg class="soc__icon" width="20" height="20">
                                 <use href="./img/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
-                    <li class="team-soc-item"><a href="" class="team-soc-link footer-soc-link link">
-                            <svg class="team-soc-icon" width="20" height="20">
+                    <li class="soc__item"><a href="" class="soc__link footer-soc__link link">
+                            <svg class="soc__icon" width="20" height="20">
                                 <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                             </svg>
                         </a></li>
                 </ul>
             </div>
-            <div class="subscr-wrap">
-                <h4 class="subscr-title">Подпишитесь на рассылку</h4>
+            <div class="subscr">
+                <p class="subscr__title">Подпишитесь на рассылку</p>
                 <form>
-                    <input type="email" class="subdcr-input" name="user-email" placeholder="E-mail">
-                    <button type="submit" class="subscr-button">Подписаться <svg class="subscr-icon" width="24" height="24">
+                    <input type="email" class="subdcr__input" name="user-email" placeholder="E-mail">
+                    <button type="submit" class="subscr__button button">Подписаться <svg class="subscr__icon" width="24" height="24">
                         <use href="./img/icons.svg#icon-send"></use>
                     </svg></button>
                 </form>
