--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <a href="./index.html" class="adress__logo logo link"><span class="logo--blue-color logo">Web</span>Studio</a>
                 <address class="adress__address">
                     <ul class="address__list list">
-                        <li class="address__studio"><a href="https://goo.gl/maps/qcduLgNu4vZSZneLA" target="_blank"
+                        <li class="address__item"><a href="https://goo.gl/maps/qcduLgNu4vZSZneLA" target="_blank"
                                 rel="noopener noreferrer nofollow" class="address__link link">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li class="address__item"><a href="mailto:info@example.com" class="address__item-link link">info@example.com</a>
                         </li>
